[workspace]
members = [
    "psst-protocol",
    "psst-core",
    "psst-cli",
    "psst-gui",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package.symphonia]
opt-level = 2
[profile.dev.package.libsamplerate]
opt-level = 2

[patch.crates-io]
# (not merged yet) solve panic at startup: "Add support for OpenBSD platform via sndio host" https://github.com/RustAudio/cpal/pull/493
cpal = { git = "https://github.com/conwayste/cpal", branch = "aaron/openbsd_sndio_host" }
